@@ -1,0 +1,7 @@
+{
+	"Revitalize.Objects.Misc.StatueOfPerfectionTracking":
+	{
+		"displayName":"Statue of Perfection Tracking",
+		"description":"A statue that tells you what you are missing to achieve true perfection."
+	},
+}
